--- a/add_group_form.html
+++ b/add_group_form.html
@@ -9,6 +9,6 @@
 	請輸入群組名稱:<input type="text" name="name">
 	<input type="submit">
 	</form>
-	<a href="group_list.php">返回群組列表<a>
+	<a href="index.php">返回群組列表<a>
 </body>
 </html>
