--- a/sign_up.html
+++ b/sign_up.html
@@ -10,6 +10,6 @@
 	請輸入密碼:<input type="password" name="password">
 	<input type="submit">
 	</form>
-	<a href="group_list.php">取消註冊<a>
+	<a href="index.php">取消註冊<a>
 </body>
 </html>
